--- a/chat-server/pom.xml
+++ b/chat-server/pom.xml
@@ -45,7 +45,13 @@
 			<artifactId>h2</artifactId>
 			<scope>runtime</scope>
 		</dependency>
-	</dependencies>
+	
+   <dependency>
+     <groupId>org.clojure</groupId>
+     <artifactId>clojure</artifactId>
+     <version>1.10.1</version>
+   </dependency>
+ </dependencies>
 
 	<build>
 		<plugins>
